# databased

./: .gitignore  CHANGELOG.md  README.md  dbManager.py  pyproject.toml
docs/: databased.html  dbmanager.html  index.html  search.js
docs/databased/: create_shell.html  custom_manager.html  customshell.html  databased.html  dbmanager.html  dbparsers.html  dbshell.html
src/databased/: __init__.py  create_shell.py  custom_manager.py  customshell.py  databased.py  dbmanager.py  dbparsers.py  dbshell.py
tests/: test_databased.py
