[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databased"
authors = [{name="Matt Manes"}]
description = "Wrapper for the standard library Sqlite3 module to make setting up and using a database quicker and easier."
version = "2.2.1"
requires-python = ">=3.10"
dependencies = ["pandas", "tabulate", "pytest", "argshell", "pathier"]
readme = "README.md"
keywords = [
    "database",
    "sqlite",
    "sqlite3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/matt-manes/databased"
"Documentation" = "https://github.com/matt-manes/databased/tree/main/docs"
"Source code" = "https://github.com/matt-manes/databased/tree/main/src/databased"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"

[tool.hatch.build.targets.sdist]
exclude = [
    ".coverage",
    ".pytest_cache",
    ".vscode",
    "tests"
]
[project.scripts]
dbshell = "databased.dbshell:main"
